--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
+    "winston": "^3.19.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
