--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,16 +5,11 @@ services:
     container_name: invoice-db
     restart: unless-stopped
     env_file:
-      - ../.env.local
+      - ./.env
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
 
   # Database Migrations
   migrate:
@@ -25,9 +20,7 @@ services:
     container_name: invoice-migrate
     command: bunx prisma migrate deploy
     env_file:
-      - ../.env.local
-    environment:
-      DATABASE_URL: postgresql://${POSTGRES_USER:-invoice}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB:-invoice}?schema=public
+      - ./.env
     depends_on:
       db:
         condition: service_healthy
@@ -43,10 +36,7 @@ services:
     ports:
       - "3000:3000"
     env_file:
-      - ../.env.local
-    environment:
-      DATABASE_URL: postgresql://${POSTGRES_USER:-invoice}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB:-invoice}?schema=public
-      NODE_ENV: production
+      - ./.env
     depends_on:
       db:
         condition: service_healthy
