Add dashboard pages for customers, invoices, and settings
- Introduced new pages for managing customers, invoices, and settings within the dashboard.
- Implemented session management and organization retrieval for each page.
- Added internationalization support with corresponding translation keys in English and Turkish.
- Updated the dashboard sidebar to reflect new navigation items.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -26,8 +26,8 @@ COPY --from=deps /app/node_modules ./node_modules
 COPY package.json bun.lock* ./
 COPY prisma ./prisma/
 
-# Generate Prisma Client
-RUN bunx prisma generate
+# Generate Prisma Client (needed for migrate deploy)
+RUN bunx prisma generate || (echo "Prisma generate failed" && exit 1)
 
 # ============================================
 # Stage 3: Build the application
