--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@node-rs/argon2": "^2.0.2",
+    "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "6",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -56,6 +57,7 @@
     "next": "16.1.3",
     "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
+    "pg": "^8.17.1",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
