--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "next": "16.1.3",
     "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.13",
     "pg": "^8.17.1",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
@@ -73,6 +74,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
