--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "next": "16.1.3",
     "next-intl": "^4.7.0",
     "next-themes": "^0.4.6",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.13",
     "pg": "^8.17.1",
     "react": "19.2.3",
@@ -74,6 +75,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^7.0.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
