Add Docker support with multi-stage build and PostgreSQL setup
- Introduced a Dockerfile with multi-stage builds for dependency installation, database migrations, and application production setup.
- Added a docker-compose.yml file to define services for PostgreSQL, database migrations, and the Next.js application.
- Updated Makefile to simplify Docker commands and added new migration commands for Prisma.
- Revised README.md to reflect changes in Docker setup and usage instructions.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
   # Database Migrations
   migrate:
     build:
-      context: ..
-      dockerfile: docker/Dockerfile
+      context: .
+      dockerfile: Dockerfile
       target: migrate
     container_name: invoice-migrate
     command: bunx prisma migrate deploy
@@ -36,8 +36,8 @@ services:
   # Next.js Application
   app:
     build:
-      context: ..
-      dockerfile: docker/Dockerfile
+      context: .
+      dockerfile: Dockerfile
     container_name: invoice-app
     restart: unless-stopped
     ports:
@@ -51,7 +51,7 @@ services:
         condition: service_healthy
       migrate:
         condition: service_completed_successfully
-        
+
 volumes:
   postgres_data:
     driver: local
